package org.dp.core.decorator;

import java.awt.*;

public class Bullet extends GameObject {

    @Override
    void print(Graphics g) {
        System.out.println("bullet-----");
    }
}
