package org.dp.core.decorator;

import java.awt.*;

public abstract class GameObject {
    int x,y;

    abstract void print(Graphics g);

}
